kubernetes/consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
  namespace: khalil-andre
  labels:
    app: consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
      - name: consumer
        image: europe-west1-docker.pkg.dev/polytech-dijon/polytech-dijon/calculatrice-consumer-khalil-andre:v1
        resources:
          requests:
            cpu: "4m"
            memory: "32Mi"
