kubernetes/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-backend
  namespace: khalil-andre
  annotations:
  
    nginx.ingress.kubernetes.io/rewrite-target: /api/$1
spec:
  ingressClassName: nginx
  rules:
  - host: calculatrice-khalil-andre.polytech-dijon.kiowy.net
    http:
      paths:
      - path: /api/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-svc
            port:
              number: 5000
