kubernetes/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend
  namespace: khalil-andre
spec:
  ingressClassName: nginx
  rules:
  - host: calculatrice-khalil-andre.polytech-dijon.kiowy.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
